openwebrx (1.2.94) bullseye jammy; urgency=low

  * Updated bookmarks infrastructure.
  * Added country selector, affecting bookmarks.
  * Added Finnish, Norwegian, Swedish bookmarks.
  * Added Chinese and German bookmarks.
  * Added cues to several settings.
  * Removing duplicate bookmarks, by importance.
  * Disabling scanner when profile side-stepped.

 -- Marat Fayzullin <luarvique@gmail.com>  Fri, 03 Oct 2025 16:12:00 +0000

openwebrx (1.2.93) bullseye jammy; urgency=low

  * Added country flags to the ADSB display.
  * Fixed problem with the ADSB decoder.
  * Sorted bookmarks: blue, then yellow, then green.
  * Added ITU region-specific bookmark folders.
  * Added AAR railroad bookmarks for ITU region 2.
  * Added UCSG marine bookmarks for ITU region 2.
  * Added generic VHF marine bookmarks for regions 1/3.
  * Added Chinese PRS and SRS public radio bookmarks.
  * Added separate CB bookmarks for ITU regions 1/2.
  * Moved NOAA bookmarks to ITU region 2.

 -- Marat Fayzullin <luarvique@gmail.com>  Fri, 26 Sep 2025 16:12:00 +0000

openwebrx (1.2.92) bullseye jammy; urgency=low

  * Switched to the new AcarsDec version 4.x.
  * Extended maximum fax page length to 10000 lines.
  * Added saving user-selected bandpass settings.
  * Added [|] shortcut to clear all bandpass settings.
  * Added acarsdec and original redsea to buildall.sh.
  * Added more shortcuts to the help page.
  * Fixed JS errors when demodulator not yet set.
  * Split aircraft and satellite code from toolbox.py.
  * Removed xz requirement from packaging.

 -- Marat Fayzullin <luarvique@gmail.com>  Fri, 05 Sep 2025 16:12:00 +0000

openwebrx (1.2.91) bullseye jammy; urgency=low

  * Added option to record silence in background recording.
  * Added range check to the FFT size setting.
  * Added option to disable bot protection scheme.
  * Increased recorded MP3 file size limit to 32MB.
  * Fixed bookmarks getting snapped to nearest step.
  * Fixed waterfall theme resetting on page reload.