@@ -1,12 +1,13 @@
 openwebrx (1.2.94) bullseye jammy; urgency=low
 
-  * Updated bookmarks infrastructure.
+  * Added a button for cloning SDR profiles.
   * Added country selector, affecting bookmarks.
   * Added Finnish, Norwegian, Swedish bookmarks.
   * Added Chinese and German bookmarks.
   * Added cues to several settings.
   * Removing duplicate bookmarks, by importance.
   * Disabling scanner when profile side-stepped.
+  * Updated bookmarks infrastructure.
 
  -- Marat Fayzullin <luarvique@gmail.com>  Fri, 03 Oct 2025 16:12:00 +0000
 
